更新了最优化了《最优化理论》，将适合于机器学习和深度学习的部分优化理论放在一起

--- a/CH01_机器学习理论基础.ipynb
+++ b/CH01_机器学习理论基础.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "再缩放的思想虽然简单，但实际操作却不平凡，主要是因为**“训练集是真实样本总体的无偏采样”**假设往往并不成立。所以观测几率不一定能代表真实几率。\n",
     "\n",
-    "现在大体上有三种做法：\n",
+    "假设反例比正例多，在保持比例平衡上大体上有三种做法：\n",
     "\n",
     "1. 对反例进行“欠采样”(undersampling)：利用集成学习机制，将反例划分为若干集合供不同学习器学习，对每个学习器进行欠采样，但没有丢失重要信息；\n",
     "2. 对正例进行“过采样”(oversampling)：不能简单对正例样本进行重复采样，可以通过插值来产生额外正例；\n",
@@ -126,9 +126,9 @@
    "metadata": {},
    "source": [
     "1. 成本是衡量模型与训练数据符合程度的指标，**成本**是针对所有的训练样本，模型拟合出来的值与训练样本真实值的误差平均值；\n",
-    "2. 模型的成本函数公式如下：\n",
+    "2. 一类模型的成本函数公式如下：\n",
     "$$ J(\\theta)=J(\\theta_0,\\theta_1)=\\frac{1}{2m}\\sum_{i=1}^{m}(h(x^{(i)})-y^{(i)})^{2}$$\n",
-    "其中m是训练样本个数，$h(x^{(i)})$是模型对每个样本的预测值，$y(x^{(i)})$是每个样本的真实值；\n",
+    "其中m是训练样本个数，$h(x^{(i)})$是模型对每个样本的预测值，$y^{(i)}$是每个样本的真实值；\n",
     "3. 在scikit-learn中，我们一般不使用成本函数来表达模型性能，而使用score来表达，数值介于[0,1]之间，越大说明准确性越好，举例如下。"
    ]
   },
@@ -351,8 +351,8 @@
    "source": [
     "| 预测数据 实际数据 | 实际恶性肿瘤 | 实际良性肿瘤 |\n",
     "| :---------------| :---------- | :---------- |\n",
-    "| 预测恶性肿瘤    | TruePositive | FalsePositive |\n",
-    "| 预测良性肿瘤    | FalseNegative | TrueNegative |"
+    "| 预测恶性肿瘤    | TP | FP |\n",
+    "| 预测良性肿瘤    | FN | TN |"
    ]
   },
   {
@@ -360,16 +360,16 @@
    "metadata": {},
    "source": [
     "查准率和召回率定义如下：\n",
-    "$$ Precision = \\frac{TruePositive}{TruePositive + FalsePositive}$$\n",
+    "$$ Precision = \\frac{TP}{TP + FP}$$\n",
     "\n",
-    "$$ Recall = \\frac{TruePositive}{TruePositive + FalseNegative}$$"
+    "$$ Recall = \\frac{TP}{TP + FN}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "其中 True/False 表示预测结果是否正确， Positive/Negative 表示预测结果是1（恶性肿瘤）或0（良性肿瘤）。所以TruePositive表示正确地预测出恶性肿瘤的数量，其他也是相应的数量。\n",
+    "其中 True/False 表示预测结果是否正确，简写为 T/F； Positive/Negative 表示预测结果是1（恶性肿瘤）或0（良性肿瘤），简写为 P/N。所以TruePositive表示正确地预测出恶性肿瘤的数量，其他也是相应的数量。\n",
     "\n",
     "**处理先验概率比较低的问题时，我们总是把概率较低的事件定义为1.**\n",
     "\n",
@@ -490,7 +490,11 @@
     "\n",
     "如果是欠拟合，说明模型过于简单，需要增加模型复杂度：\n",
     "* **增加有价值的特征**，重新理解训练数据，提取更有价值和更丰富的特征；\n",
-    "* **增加多项式特征**， 有时候从已知数据挖掘更多特征不是很容易，可以使用纯数学方法，增加多项式特征，比如原来的特征是$x_1, x_2$，可以增加为$x_1, x_2, x_1*x_2, x_1^2,x_2^2,...$如果因此走向了过拟合，再采取一些工具来减少特征进行特征降维。"
+    "\n",
+    "\n",
+    "* **增加多项式特征**， 有时候从已知数据挖掘更多特征不是很容易，可以使用纯数学方法，增加多项式特征，比如原来的特征是$x_1, x_2$，可以增加为$x_1, x_2, x_1*x_2, x_1^2,x_2^2,...$如果因此走向了过拟合，再采取一些工具来减少特征进行特征降维。\n",
+    "\n",
+    "    但是要注意，**因为增加多项式特征涉及到不同特征之间的运算，所以一定要对特征做归一化，保持在相同的量纲。**"
    ]
   },
   {
@@ -509,10 +513,12 @@
     "下面介绍三种拆分策略：\n",
     "\n",
     "1. OvO(one vs one)：将N个类别的训练集，每次抽出两个类别，形成 N(N-1)/2 个分类任务，得到对应的分类器；对于测试样例，将分类器的结果按照多数原则投票产生；\n",
-    "2. OvR(one vs rest): 每次将一个类的样例做正例、其他类的样例做反例来训练N个分类器；测试时若仅有一个分类器预测为正例，对应的类标记为最终结果，若有多个分类器预测为正例，通常考虑各个分类器的预测置信度;\n",
-    "3. MvM(Many vs Many): 每次将若干个类作为正例，若干个其他类作为反类。OvO、OvR 可以看做 MvM 的反例。正反例构造要有特殊设计，不能随意选取，一种常用的技术是：[“纠错输出码”（error correcting output codes，简称ECOC）](https://blog.csdn.net/weixin_35732969/article/details/80509498)\n",
     "\n",
-    "_**置信度指的是：如果我们不厌其烦地抽样本算区间，得到了很多很多置信区间。那么在这些置信区间中，有95%的置信区间能覆盖到真值。**_"
+    "\n",
+    "2. OvR(one vs rest): 每次将一个类的样例做正例、其他类的样例做反例来训练N个分类器；测试时若仅有一个分类器预测为正例，对应的类标记为最终结果，若有多个分类器预测为正例，通常考虑各个分类器的预测置信度;\n",
+    "\n",
+    "\n",
+    "3. MvM(Many vs Many): 每次将若干个类作为正例，若干个其他类作为反类。OvO、OvR 可以看做 MvM 的特例。正反例构造要有特殊设计，不能随意选取，一种常用的技术是：[“纠错输出码”（error correcting output codes，简称ECOC）](https://blog.csdn.net/weixin_35732969/article/details/80509498)"
    ]
   },
   {
@@ -532,11 +538,14 @@
     "三种拆分策略的优缺点：\n",
     "\n",
     "1. OvO 需要训练 N(N-1)/2 个分类器，存储开销和测试时间比 OvR 更大；但训练时 OvR 每次都需要用到全部的训练样例，因此单个分类器的时间比OvO大。**在类别很多时，OvO 训练时间开销通常比 OvR 更小；至于预测测试集时的性能，两者差不多。**\n",
+    "\n",
+    "\n",
     "2. 一般来说，ECOC 编码越长，纠错能力越强，但也意味着需要训练的分类器也越多(编码长度等于分类器数量)，计算和存储开销都会变大；另外，对于有限类别，组合数目有限，码长过长失去意义。"
    ]
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -573,7 +582,7 @@
     "height": "473px",
     "left": "75px",
     "top": "110px",
-    "width": "302px"
+    "width": "181px"
    },
    "toc_section_display": true,
    "toc_window_display": true
