--- a/CH02_最优化理论.ipynb
+++ b/CH02_最优化理论.ipynb
@@ -567,7 +567,370 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 最速下降法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**等价的极值问题**\n",
+    "\n",
+    "如果矩阵 $\\mathbf{A}\\in R^{n\\times n}$ 是对称正定矩阵，则求解线性方程组\n",
+    "\n",
+    "$$\\mathbf{A}\\mathbf{x}=\\mathbf{b}$$\n",
+    "\n",
+    "的解 $\\mathbf{x}^\\ast$ 等价于求解二次函数\n",
+    "\n",
+    "$$\\varphi(\\mathbf{x})=(\\mathbf{A}(\\mathbf{x}-\\mathbf{x}^\\ast),(\\mathbf{x}-\\mathbf{x}^\\ast))$$\n",
+    "\n",
+    "的极小值点。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "考虑 $R^n$ 中的二次函数\n",
+    "\n",
+    "$$\\eta=\\varphi(\\mathbf{x})=(\\mathbf{A}(\\mathbf{x}-\\mathbf{x}^\\ast),(\\mathbf{x}-\\mathbf{x}^\\ast))$$\n",
+    "\n",
+    "其中 $\\mathbf{A}\\in R^{n\\times n}$ 是对称正定矩阵。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们的目标是求上式的极小值。\n",
+    "\n",
+    "这个二次函数几何上是椭圆抛物面，固定$\\eta = eta_0, \\; \\varphi(\\mathbf{x})=\\eta_0$ 是 $R^n$ 中的超椭圆面， $\\mathbf{x}^\\ast$ 是此超椭圆面的中心。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "给定初始近似 $\\mathbf{x}^{(0)}$，在椭圆面 $\\varphi(\\mathbf{x})=\\varphi(\\mathbf{x^{(0)}})$ 上选择一个方向，使 $\\varphi(\\mathbf{x})$ 沿此方向下降最快。\n",
+    "\n",
+    "设 $\\mathbf{r}\\in R^n$ 是任意给定的向量，考虑 $\\varphi(\\mathbf{x}^{(0)}+\\alpha\\mathbf{r})$，其中 $\\alpha$ 是任意的实数。容易得到\n",
+    "\n",
+    "$$\\begin{split}\n",
+    "\\frac{d}{d\\alpha}\\varphi(\\mathbf{x}^{(0)}+\\alpha\\mathbf{r})|_{\\alpha=0}\n",
+    "=& \\frac{d}{d\\alpha}[\\alpha^2(\\mathbf{A}\\mathbf{r},\\mathbf{r})+\\alpha(\\mathbf{A}\\mathbf{r},\\mathbf{x}_0-\\mathbf{x}^\\ast)+\\alpha(\\mathbf{r},\\mathbf{A}(\\mathbf{x}_0-\\mathbf{x}^\\ast))]|_{\\alpha=0}\\\\\n",
+    "=& \\frac{d}{d\\alpha}[\\alpha^2(\\mathbf{A}\\mathbf{r},\\mathbf{r})+2\\alpha(\\mathbf{r},\\mathbf{A}(\\mathbf{x}_0-\\mathbf{x}^\\ast))]|_{\\alpha=0}\\\\\n",
+    "=& [2\\alpha(\\mathbf{A}\\mathbf{r},\\mathbf{r})+2(\\mathbf{r},\\mathbf{A}(\\mathbf{x}_0-\\mathbf{x}^\\ast))]|_{\\alpha=0}\\\\\n",
+    "=& -2(\\mathbf{A}(\\mathbf{x}^\\ast-\\mathbf{x}_0),\\mathbf{r})\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "其中，因为$\\mathbf{A}=\\mathbf{A}^T$， 所以\n",
+    "\n",
+    "$$(\\mathbf{A}\\mathbf{r},\\mathbf{x}_0-\\mathbf{x}^\\ast) = (\\mathbf{A}\\mathbf{r})^T(\\mathbf{x}_0-\\mathbf{x}^\\ast) = \\mathbf{r}^T\\mathbf{A}(\\mathbf{x}_0-\\mathbf{x}^\\ast) =(\\mathbf{r},\\mathbf{A}(\\mathbf{x}_0-\\mathbf{x}^\\ast))$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "由上式可知，$\\varphi(\\mathbf{x}) $ 在 $\\mathbf{x}^{(0)}$ 处的最速下降方向是 $\\mathbf{r}^{(0)} = \\mathbf{A}(\\mathbf{x}^\\ast-\\mathbf{x}_0) = \\mathbf{b}-\\mathbf{A}\\mathbf{x}^{(0)}$,称 $\\mathbf{r}^{(0)}$ 是 $\\mathbf{x}^{(0)}$ 的**残量**或者**残向量**。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "然后在最速下降方向 $\\mathbf{r}^{(0)}$ 上求一点，使得 $\\varphi(\\mathbf{x})$ 取极小值，即求 $\\alpha_0$ 使得\n",
+    "\n",
+    "$$\\varphi(\\mathbf{x}^{(0)}+\\alpha_0\\mathbf{r}^{(0)})=\\min_{\\alpha} \\varphi(\\mathbf{x}^{(0)}+\\alpha\\mathbf{r}^{(0)})$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "由\n",
+    "\n",
+    "$$\\frac{d}{d\\alpha}\\varphi(\\mathbf{x}^{(0)}+\\alpha\\mathbf{r}^{(0)}) = -2(\\mathbf{A}\\mathbf{r}^{(0)},\\mathbf{r}^{(0)})-\\alpha(\\mathbf{r}^{(0)},\\mathbf{r}^{(0)})=0$$\n",
+    "\n",
+    "解得\n",
+    "\n",
+    "$$\\alpha_0 = \\frac{(\\mathbf{r}^{(0)},\\mathbf{r}^{(0)})}{(\\mathbf{A}\\mathbf{r}^{(0)},\\mathbf{r}^{(0)})}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这表明 $\\varphi(\\mathbf{x}^{(0)}+\\alpha\\mathbf{r}^{(0)})$ 在\n",
+    "\n",
+    "$$\\mathbf{x}^{(1)} = \\mathbf{x}^{(0)}+\\alpha_0 \\mathbf{r}^{(0)}$$\n",
+    "\n",
+    "处达到最小。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对 $\\mathbf{x}^{(1)}$ 重复上面的讨论，同样可以得到最速下降方向 $\\mathbf{r}^{(1)}$ 以及在此方向上的极小值点 $\\mathbf{x}^{(1)}$。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们可以得到如下的递推关系：\n",
+    "\n",
+    "$$\\begin{split} \n",
+    "&\\mathbf{r}^{(k)} = \\mathbf{b}-\\mathbf{A}\\mathbf{x}^{(k)}\\\\\n",
+    "&\\alpha_k = \\frac{(\\mathbf{r}^{(k)},\\mathbf{r}^{(k)})}{(\\mathbf{A}\\mathbf{r}^{(k)},\\mathbf{r}^{(k)})}\\\\\n",
+    "&\\mathbf{x}^{(k+1)} = \\mathbf{x}^{(k)}+\\alpha_k\\mathbf{r}^{(k)}\n",
+    "\\end{split}$$\n",
+    "\n",
+    "其中 $k=0,1,\\cdots$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "基于最速下降法的 $\\{\\mathbf{x}^{(k)}\\},\\{\\mathbf{r}^{(k)}\\}$ 有下列几何特征：\n",
+    "\n",
+    "* $(\\mathbf{r}^{(k+1)},\\mathbf{r}^{(k)})=0$;\n",
+    "\n",
+    "\n",
+    "* $\\mathbf{x}^{(k+1)} = \\mathbf{x}^{(k)}+\\alpha_k\\mathbf{r}^{(k)}$ 是 $\\mathbf{r}^{(k)}$ 与 $\\varphi(\\mathbf{x})=\\varphi(\\mathbf{x}^{(k)})$ 相交所得线段的中点。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "图示如下：\n",
+    "\n",
+    "<img src='figure/steepestdescent0.png' width='400' height='300' align='left'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 共轭梯度法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在最速下降法中，$(\\mathbf{r}^{(k+1)},\\mathbf{r}^{(k)})=0$。所以 k+1 次的下降方向与 k 次的下降方向是正交的，不会选择保持前一个搜索方向的最小值。按照每次在给定点的最速下降方向下降，未必是最好的策略，因为这只是局部策略，为尽快求解，我们赢考虑整体策略。也就是我们下面要介绍的共轭梯度法。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "首先我们给出**共轭向量组**的定义：\n",
+    "\n",
+    "设 $\\mathbf{A}$ 对称正定，若 $R^n$ 中向量组\n",
+    "\n",
+    "$$\\{\\mathbf{p}^{(0)},\\mathbf{p}^{(1)},\\cdots,\\mathbf{p}^{(l)}\\}\\tag{CG-1}$$\n",
+    "\n",
+    "满足\n",
+    "\n",
+    "$$(\\mathbf{A}\\mathbf{p}^{(i)},\\mathbf{p}^{(j)})=0,\\; i\\neq j\\tag{CG-2}$$\n",
+    "\n",
+    "则称其为 $R^n$ 中一个 **A 共轭向量组**，或 **A 正交向量组**。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "显然，当 $l< n$ 时，不含零向量的 A 共轭向量组线性无关，当 $l=n-1$ 时，它们构成 $R^n$ 的一组 A 正交基。当$\\mathbf{A}=\\mathbf{I}$ 时， A 正交性就是一般的正交性。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "将方程组 $\\mathbf{A}\\mathbf{x}=\\mathbf{b}$ 的解 $\\mathbf{x}^\\ast$ 按 $\\mathbf{x}^\\ast$ 按 (CG-1)(取 $l=n-1$)展开：\n",
+    "\n",
+    "$$\\mathbf{x}^\\ast=\\sum_{i=0}^{n-1}\\alpha_i\\mathbf{p}^{(i)}$$,\n",
+    "\n",
+    "带入方程组 $\\mathbf{A}\\mathbf{x}=\\mathbf{b}$，得到\n",
+    "\n",
+    "$$\\sum_{i=0}^{n-1}\\alpha_i\\mathbf{A}\\mathbf{p}^{(i)}=\\mathbf{b}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "两边与 $\\mathbf{p}^{(i)}$ 作内积，由 A 正交性(CG-2) 得\n",
+    "\n",
+    "$$\\alpha_k = \\frac{(\\mathbf{b},\\mathbf{p}^{(k)})}{(\\mathbf{A}\\mathbf{p}^{(k)},\\mathbf{p}^{(k)})}, k=0,1,\\cdots,n-1$$\n",
+    "\n",
+    "所以，解向量\n",
+    "\n",
+    "$$\\mathbf{x}^\\ast=\\sum_{i=0}^{n-1}\\frac{(\\mathbf{b},\\mathbf{p}^{(i)})}{(\\mathbf{A}\\mathbf{p}^{(i)},\\mathbf{p}^{(i)})}\\mathbf{p}^{(i)}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可以写成有限步迭代的形式\n",
+    "\n",
+    "$$\\mathbf{x}^{(k+1)} = \\mathbf{x}^{(k)} + \\alpha_k \\mathbf{p}^{(k)}\\tag{CG-3}$$\n",
+    "\n",
+    "其中 $\\mathbf{x}^{(0)}=\\mathbf{0}$ 为初始向量。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "从 (CG-3) 可知，近似解 $\\mathbf{x}^{(k+1)}$ 是由前一近似解 $\\mathbf{x}^{(k)}$ 沿向量 $\\mathbf{p}^{(k)}$ 的方向移动 $\\alpha_k \\mathbf{p}^{(k)}$ 得到的。若 $\\alpha_k$ 由 (CG-3) 式确定，则有限步迭代(至多 n 步)即可得到方程组的精确解 $\\mathbf{x}^\\ast$。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "注意到 $\\mathbf{x}^{(k)}\\in Span\\{\\mathbf{p}^{(0)},\\cdots,\\mathbf{x}^{(k-1)}\\}$, 由 A 正交性 (CG-2)有 $(\\mathbf{A}\\mathbf{x}^{(k)}, \\mathbf{p}^{(k)})=0$,所以\n",
+    "\n",
+    "$$(\\mathbf{b}, \\mathbf{p}^{(k)})=((\\mathbf{b} - \\mathbf{A}\\mathbf{x}^{(k)}),\\mathbf{p}^{(k)})=(\\mathbf{r}^{(k)},\\mathbf{p}^{(k)})$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这样 $\\alpha_k$ 式可写成\n",
+    "\n",
+    "$$\\alpha_k = \\frac{(\\mathbf{r}^{(k)},\\mathbf{p}^{(k)})}{(\\mathbf{A}\\mathbf{p}^{(k)},\\mathbf{p}^{(k)})}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "另一方面，设 $\\mathbf{x}^{(0)}=\\mathbf{0}$，且已有近似解 $\\mathbf{x}^{(k)}\\in Span\\{\\mathbf{p}^{(0)},\\cdots,\\mathbf{p}^{(k-1)}\\}$,考虑极值问题：求 $\\tilde{\\alpha}_k$,使\n",
+    "\n",
+    "$$\\phi(\\mathbf{x}^{(k)}+\\tilde{\\alpha}_k \\mathbf{p}^{(k)})=\\min_{\\alpha}\\phi(\\mathbf{x}^{(k)}+\\alpha\\mathbf{p}^{(k)}),$$\n",
+    "\n",
+    "其中二次函数 $\\phi(\\mathbf{x})=(\\mathbf{A}(\\mathbf{x}-\\mathbf{x}^\\ast),(\\mathbf{x}-\\mathbf{x}^\\ast))$。由 $\\phi(\\mathbf{x})$ 的表达式有：\n",
+    "\n",
+    "$$\\phi(\\mathbf{x}^{(k)}+\\alpha\\mathbf{p}^{(k)})=\\phi(\\mathbf{x}^{(k)})-2\\alpha(\\mathbf{p}^{(k)},\\mathbf{r}^{(k)})+\\alpha^2(\\mathbf{p}^{(k)},\\mathbf{A}\\mathbf{p}^{(k)})$$\n",
+    "\n",
+    "其中\n",
+    "\n",
+    "$$\\mathbf{r}^{(k)}=\\mathbf{A}\\mathbf{x}^\\ast - \\mathbf{A}\\mathbf{x}^{(k)} = \\mathbf{b}-\\mathbf{A}\\mathbf{x}^{(k)}$$\n",
+    "\n",
+    "是近似解 $\\mathbf{x}^{(k)}$ 的残量。由 $\\frac{d\\phi}{d\\alpha}=0$ 得到\n",
+    "\n",
+    "$$\\tilde{\\alpha}_k = \\frac{(\\mathbf{r}^{(k)},\\mathbf{p}^{(k)})}{(\\mathbf{A}\\mathbf{p}^{(k)},\\mathbf{p}^{(k)})}$$\n",
+    "\n",
+    "此时 $\\phi(\\mathbf{x}^{(k)}+\\alpha\\mathbf{p}^{(k)})$ 达到极小。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "由于 $\\mathbf{x}^{(k)}(k=2,3,\\cdots)$ 是由 $\\mathbf{x}^{(1)}=\\tilde{\\alpha}_0\\mathbf{x}^{(0)}$ 开始逐步求得的，所以\n",
+    "\n",
+    "$$\\mathbf{x}^{(k)}=\\sum_{i=0}^{k-1}\\tilde{\\alpha}_i\\mathbf{p}^{(i)}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "比较上面的式子，知 $\\tilde{\\alpha}_k = \\alpha_k$，这说明有限步迭代(CG-3)中的 $\\alpha_k$ 正是使 $\\phi(\\mathbf{x}^{(k)}+\\alpha\\mathbf{p}^{(k)})$ 达到最小的参数。 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**构造共轭梯度**\n",
+    "\n",
+    "下面将说明从任意初始向量 $\\mathbf{x}^{(0)}$ 出发，可以逐次利用残量 $\\{\\mathbf{r}^{(k)}\\}$ 来构造一组 A 共轭向量 $\\{\\mathbf{p}^{(k)}\\}$ 和近似解 $\\{\\mathbf{x}^{(k)}\\}$。因为 $\\{\\mathbf{r}^{(k)}\\}$ 相应于 $\\phi(\\mathbf{x})$ 在 $\\mathbf{x}=\\mathbf{x}^{(k)}$ 处的梯度，所以 $\\{\\mathbf{p}^{(k)}\\}$ 也称为共轭梯度。这样，利用 $\\{\\mathbf{p}^{(k)}\\}$\n",
+    "来求解线性代数方程组的方法就称为**共轭梯度法**。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "取 $\\mathbf{p}^{(0)} = \\mathbf{r}^{(0)}, \\mathbf{p}^{(k)}(k=1,\\cdots,n-1)$ 为与 $\\mathbf{p}^{(0)},\\cdots,\\mathbf{p}^{(k-1)}$ 均 A 共轭的向量(这样的向量不是唯一的)。CG 法中取 $\\mathbf{p}^{(k)}$ 为\n",
+    "$\\mathbf{r}^{(k)}$ 与 $\\mathbf{p}^{(k-1)}$ 的线性组合，即\n",
+    "\n",
+    "$$\\mathbf{p}^{(k)} = \\mathbf{r}^{(k)} + \\beta_{k-1}\\mathbf{p}^{(k-1)}$$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "利用 $(\\mathbf{p}^{(k)}, \\mathbf{A}\\mathbf{p}^{(k-1)}) = 0$ 得到\n",
+    "\n",
+    "$$\\beta_{k-1} = -\\frac{(\\mathbf{r}^{(k)}, \\mathbf{A}\\mathbf{p}^{(k-1)})}{(\\mathbf{p}^{(k-1)}, \\mathbf{A}\\mathbf{p}^{(k-1)})}$$\n",
+    "\n",
+    "这样确定的 $\\mathbf{p}^{(k)}$ 与 $\\mathbf{p}^{(k-1)}$ 是 A 共轭的。如此得到的向量序列 $\\{\\mathbf{p}^{(k)}\\}$ 是一个 A共轭向量组。 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "综上，可得如下算法：\n",
+    "\n",
+    "1. 任取 $\\mathbf{x}^{(0)}\\in R^n$；\n",
+    "\n",
+    "\n",
+    "2. $\\mathbf{r}^{(0)} = \\mathbf{b}-\\mathbf{A}\\mathbf{x}^{(0)},\\; \\mathbf{p}^{(0)} = \\mathbf{r}^{(0)}$;\n",
+    "\n",
+    "\n",
+    "3. 对于 $k=0,1,\\cdots,$ 计算\n",
+    "\n",
+    "$$\\begin{split}\n",
+    "& \\alpha_k = \\frac{(\\mathbf{r}^{(k)},\\mathbf{p}^{(k)})}{(\\mathbf{A}\\mathbf{p}^{(k)},\\mathbf{p}^{(k)})}\\\\\n",
+    "& \\mathbf{x}^{(k+1)} = \\mathbf{x}^{(k)} + \\alpha_k \\mathbf{p}^{(k)}\\\\\n",
+    "& \\mathbf{r}^{(k+1)} = \\mathbf{b} - \\mathbf{A}(\\mathbf{x}^{(k)}+\\alpha_k \\mathbf{p}^{(k)})= \\mathbf{r}^{(k)}-\\alpha_k \\mathbf{A}\\mathbf{p}^{(k)}\\\\\n",
+    "& \\beta_{k} = -\\frac{(\\mathbf{r}^{(k+1)}, \\mathbf{A}\\mathbf{p}^{(k)})}{(\\mathbf{p}^{(k)}, \\mathbf{A}\\mathbf{p}^{(k)})},\\\\\n",
+    "&\\mathbf{p}^{(k+1)} = \\mathbf{r}^{(k+1)} + \\beta_k\\mathbf{p}^{(k)}\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "由上面的式子可得\n",
+    "\n",
+    "* $(\\mathbf{r}^{(k+1)}, \\mathbf{p}^{(k)}) = 0$;\n",
+    "\n",
+    "\n",
+    "* $(\\mathbf{r}^{(k)}, \\mathbf{p}^{(k)}) = (\\mathbf{r}^{(k)}, \\mathbf{r}^{(k)})$。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在计算过程中，若遇到 $\\mathbf{r}^{(k)}=\\mathbf{0}$ 或 $(\\mathbf{p}^{(k)}, \\mathbf{A}\\mathbf{p}^{(k)})=0$，计算终止。此时：\n",
+    "\n",
+    "* 如果 $\\mathbf{r}^{(k)}=\\mathbf{0}$ 则 $\\mathbf{x}^{(k)}=\\mathbf{x}^\\ast$;\n",
+    "\n",
+    "\n",
+    "* 如果 $(\\mathbf{p}^{(k)}, \\mathbf{A}\\mathbf{p}^{(k)})=0$，则因 $\\mathbf{A}$ 正定，有 $\\mathbf{p}^{(k)}= \\mathbf{0}$。再由 $(\\mathbf{r}^{(k)}, \\mathbf{r}^{(k)})=(\\mathbf{r}^{(k)}, \\mathbf{p}^{(k)}) =\\mathbf{0}$,所以亦有 $\\mathbf{r}^{(k)}=\\mathbf{0}$。"
    ]
   },
   {
@@ -842,6 +1205,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
