--- a/CH04_逻辑回归.ipynb
+++ b/CH04_逻辑回归.ipynb
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "把g 带入式 (linear) 中，得到 \n",
+    "把 g 带入式 (linear) 中，得到 \n",
     "\n",
     "$$ \\ln\\frac{y}{1-y} = (\\mathbf{w}^T\\mathbf{x} + b)$$\n",
     "\n",
@@ -98,7 +98,11 @@
     "**LR的优点如下：**\n",
     "\n",
     "1. 直接对分类可能性进行建模，无需假设数据分布，避免了假设分布不准确所带来的问题；\n",
+    "\n",
+    "\n",
     "2. 预测结果不只是“类别”，是近似概率预测，对许多需利用概率辅助决策的任务很有用；\n",
+    "\n",
+    "\n",
     "3. 对率函数是任意阶数可导的凸函数，现有的许多数值优化算法都可以直接用于求解最优解。"
    ]
   },
@@ -738,10 +742,23 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -774,7 +791,7 @@
     "height": "473px",
     "left": "1207px",
     "top": "134px",
-    "width": "302px"
+    "width": "185px"
    },
    "toc_section_display": true,
    "toc_window_display": true
