--- a/CH03_线性回归.ipynb
+++ b/CH03_线性回归.ipynb
@@ -15,6 +15,8 @@
     "\n",
     "**属性的“序”特性：**\n",
     "1. 对于离散属性，如果属性值之间存在“序”关系，可以通过连续化（实际操作中就是转化为int/float型数据）转化为连续值，例如三值属性“高度”（高、中、低）可以转化为{3,2,1};\n",
+    "\n",
+    "\n",
     "2. 如果属性之间不存在序关系，若将其连续化，会对后续处理如距离计算等造成误导；**这个时候通常将其化为n维向量。比如(1,0,0),(0,1,0),(0,0,1)。**"
    ]
   },
@@ -83,6 +85,9 @@
     "更一般的情形是本节开头所提到的数据集 $D = \\{\\mathbf{x}^1, ...,\\mathbf{x}^m\\}, \\quad \\mathbf{x}^k = (x_1^k, ... , x_n^k)$, 我们试图获得学习器（逼近函数）：\n",
     "\n",
     "$$ h_\\theta(\\mathbf{x}^k) = \\theta_0 x_0^k + \\theta_1 x_1^k + ... + \\theta_n x_n^k$$\n",
+    "\n",
+    "其中 $x_0^k=1$。\n",
+    "\n",
     "\n",
     "类似，可以通过最小二乘法来进行参数估计。"
    ]
@@ -421,22 +426,11 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "name": "python3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -469,7 +463,7 @@
     "height": "473px",
     "left": "1207px",
     "top": "134px",
-    "width": "302px"
+    "width": "165px"
    },
    "toc_section_display": true,
    "toc_window_display": true
