局部细节更新

--- a/CH00_数学公式.ipynb
+++ b/CH00_数学公式.ipynb
@@ -49,6 +49,49 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "run_control": {
+     "marked": true
+    }
+   },
+   "source": [
+    "## Jensen不等式"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "过一个凸函数上任意两点所作割线一定在这两点间的函数图象的下方，即：\n",
+    "\n",
+    "$$f(tx_1+(1-t)x_2)\\leq tf(x_1)+(1-t)f(x_2)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**概率密度函数的形式**\n",
+    "\n",
+    "假设$\\Omega$是实数轴上的可测子集，而 $f(x)$ 是非负函数，使得\n",
+    "\n",
+    "$$\\int_{-\\infty}^\\infty f(x)\\,dx = 1$$\n",
+    "\n",
+    "$f$是一个概率密度函数。\n",
+    "\n",
+    "Jensen不等式变成以下关于凸积分的命题：\n",
+    "\n",
+    "若 g是任一实值可测函数，$\\phi$在 g 的值域中是凸函数，则\n",
+    "\n",
+    "$$\\varphi\\left(\\int_{-\\infty}^\\infty g(x)f(x)\\, dx\\right) \\le \\int_{-\\infty}^\\infty \\varphi(g(x)) f(x)\\, dx$$\n",
+    "\n",
+    "若$g(x)=x$，则这个形式的不等式简化为一个常用特例：\n",
+    "\n",
+    "$$\\varphi\\left(\\int_{-\\infty}^\\infty x\\, f(x)\\, dx\\right) \\le \\int_{-\\infty}^\\infty \\varphi(x)\\,f(x)\\, dx$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 几何平均"
@@ -429,7 +472,6 @@
     "6. 如图所示以及上述第四点关于导数在正负无穷远处为零的性质可知：\n",
     "\n",
     "    * **sigmoid 函数在变量趋于正负无穷时(实际操作中就是指取值的绝对值比较大时)会出现饱和(saturate)现象(导数等于0)，意味着函数会变得很平，并且对输入的微小改变不敏感。**\n",
-    "    \n",
     "    \n",
     "    * **函数在接近 0 点附近导数值比较大，也就是对数值的变动比较敏感，而远离 0 点时会饱和性越来越强(导数越来趋向于0)，所以更适合做输出单元，当然要配合抑制饱和的代价函数来使用，并不太适合做隐藏单元的激活函数。**"
    ]
@@ -1056,14 +1098,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 香农熵"
+    "## 信息量"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "我们定义一个事件 x 的自信息为\n",
+    "在谈信息熵之前，我们先提一个概念：**信息量(专业术语是：自信息), 信息量等于传输该信息所用的代价**，也可以说是，解决这个问题所需要的信息量大小。我们日常经常会说，这个人长篇大论没有什么信息量，可以视为我们对这个人说这段话所包含的信息的度量。信息量应该至少满足三个条件：\n",
+    "* 非负性：一条额外信息传递所带来的累积信息量不应该小于传递这条额外信息之前，所以这条额外信息的信息量（即累积信息量的差）应该是非负的；\n",
+    "\n",
+    "\n",
+    "* 可加性：针对同一件事，两个人传递的两条独立信息所包含的信息量是可加的；\n",
+    "\n",
+    "\n",
+    "* **与事件本身发生的概率成反比**： 对于一件事，什么信息包含的信息量大呢？**发生概率低的信息所携带的信息量大**，如果一个人告诉你，太阳从东方升起（百分百发生的事情，携带的信息量为0）。\n",
+    "\n",
+    "总的来说，一条信息的信息量和它的不确定性有直接关系。信息量的数学定义为：$f(x)=-log_{2}P(x)$，其中 P(x) 为该事件发生的概率。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 信息熵（香农熵）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们定义一个事件 x 的自信息（信息量）为\n",
     "\n",
     "$$I(x) = -\\log P(x)$$"
    ]
@@ -1072,7 +1137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "我们可以用**香农熵**来对整个概率分布中的不确定性总量进行量化：\n",
+    "我们可以用**香农熵(信息熵)**来对整个概率分布中的不确定性总量进行量化：\n",
     "\n",
     "$$H(x)=-E_{x\\sim P}\\log P(x)$$\n",
     "\n",
@@ -1097,7 +1162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "如果对于同一个随机变量 x 有两个单独的概率分布 $P(x)$ 和 $Q(x)$，可以使用 **KL散度** 来衡量这两个分布的差异：\n",
+    "如果对于同一个随机变量 x 有两个单独的概率分布 $P(x)$ 和 $Q(x)$，可以使用 **KL散度** 或者 **相对熵(relative entropy)**来衡量这两个分布的差异：\n",
     "\n",
     "$$D_{KL}(P||Q) = E_{x\\sim P}\\left[\\log\\frac{P(x)}{Q(x)}\\right]=E_{x\\sim P}[\\log P(x)-\\log Q(x)]$$"
    ]
@@ -1113,6 +1178,44 @@
     "* KL 散度为0，当且仅当 P 和 Q 在离散型变量的情况下是相同的分布，或者在连续型变量的情况下是“几乎处处”相同的。\n",
     "\n",
     "因为 KL 散度是非负的，并且衡量的是两个分布之间的差异，经常被用作度量两个分布之间的“距离”；然而因为 KL 散度不对称的性质，它并不是真的距离。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**KL散度非负的证明**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "由 Jensen 不等式可知：\n",
+    "\n",
+    "若 f 是一个概率密度函数，g是任一实值可测函数，$\\phi$在 g 的值域中是凸函数，则\n",
+    "\n",
+    "$$\\varphi\\left(\\int_{-\\infty}^\\infty g(x)f(x)\\, dx\\right) \\le \\int_{-\\infty}^\\infty \\varphi(g(x)) f(x)\\, dx$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "令 $\\varphi(x)=-\\ln x$，是一个严格上凸函数，则有："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\begin{split}\n",
+    "D_{KL}(P||Q)&=\\int_{-\\infty}^\\infty \\ln(\\frac{P(x)}{Q(x)}) P(x)\\, dx\\\\\n",
+    "&=\\int_{-\\infty}^\\infty -\\ln(\\frac{Q(x)}{P(x)}) P(x)\\, dx\\\\\n",
+    "&\\geq -\\ln\\left(\\int_{-\\infty}^\\infty \\frac{Q(x)}{P(x)}P(x)\\, dx\\right)=-\\ln 1 = 0\n",
+    "\\end{split}$$\n",
+    "\n",
+    "当且仅当 $P(x)=Q(x)$ 时等号完全成立。"
    ]
   },
   {
@@ -1135,17 +1238,144 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## [最大似然估计（maximum likelihood estimation，缩写为MLE）](https://zh.wikipedia.org/wiki/%E6%9C%80%E5%A4%A7%E4%BC%BC%E7%84%B6%E4%BC%B0%E8%AE%A1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " **二分类问题对应的定义**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "令 $P(Y=1|X=x) = P(x;\\theta)$, 其中 P 是以 $\\theta$ 为参数的函数。假设样本 $x_i$ 之间相互独立，则似然函数(likelihood function)为\n",
+    "\n",
+    "$$L(\\theta) = \\prod_{i=1}^m P(Y=y_i|X=x_i) = \\prod_{i=1}^m P(x_i;\\theta)^{y_i}(1-P(x_i;\\theta))^{(1- y_i)}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对 $L(\\theta)$取对数，则得到**对数似然函数**（log-likelihood function）如下：\n",
+    "\n",
+    "$$\\ell(\\theta) = \\ln L(\\theta) = \\sum_{i=1}^{m} y_i \\ln P(x_i;\\theta) + \\sum_{i=1}^{m} (1-y_i) \\ln (1-P(x_i;\\theta))$$\n",
+    "\n",
+    "称\n",
+    "\n",
+    "$$ \\theta^{\\star} = \\arg\\max_{\\theta}\\ell(\\theta) = -\\arg\\min_{\\theta}\\ell(\\theta)$$\n",
+    "\n",
+    "为**最大化对数似然估计**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**一般意义下的最大似然估计**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "考虑一组含有 m 个样本的数据集 $\\mathbf{X} = \\{\\mathbf{x}_1,\\mathbf{x}_2, \\cdots,\\mathbf{x}_m\\}$，由未知的真实数据分布 $p_{data}(\\mathbf{x})$ 生成。\n",
+    "\n",
+    "令 $p_{model}(\\mathbf{x};\\mathbf{\\theta})$ 是一族由 $\\mathbf{\\theta}$ 确定在相同空间上的概率分布。换言之，$p_{model}(\\mathbf{x};\\mathbf{\\theta})$ 是 模型或者神经网络模型对 $p_{data}(\\mathbf{x})$ 的逼近。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "则 $\\mathbf{\\theta}$ 的最大似然估计被定义为\n",
+    "\n",
+    "$$\\mathbf{\\theta}_{ML} = \\arg\\max_{\\mathbf{\\theta}}p_{model}(\\mathbf{X};\\mathbf{\\theta})=\\arg\\max_{\\mathbf{\\theta}}\\prod_{i=1}^m p_{model}(\\mathbf{x}_i;\\mathbf{\\theta})$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "多个数值的乘积容易导致数值下溢，我们发现似然对数不会改变 $\\arg\\max$，我们将乘积通过对数函数转换为求和形式：\n",
+    "\n",
+    "$$\\mathbf{\\theta}_{ML} = \\arg\\max_{\\mathbf{\\theta}}\\sum_{i=1}^{m}\\log p_{model}(\\mathbf{x}_i;\\mathbf{\\theta})$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "因为缩放代价函数不会改变 $\\arg\\max$，我们可以除以 m 得到和训练数据经验分布 $\\hat{p}_{data}(\\mathbf{x})$ 相关的期望作为准则：\n",
+    "\n",
+    "$$\\mathbf{\\theta}_{ML} = \\arg\\max_{\\mathbf{\\theta}}E_{\\mathbf{x}\\sim \\hat{p}_{data}}\\log p_{model}(\\mathbf{x};\\mathbf{\\theta})$$\n",
+    "\n",
+    "注：[大数定律](https://zh.wikipedia.org/wiki/%E5%A4%A7%E6%95%B0%E5%AE%9A%E5%BE%8B)可以支持以上转换的成立。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 三者的等价性"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "由交叉熵的定义可知\n",
     "\n",
     "$$\\min_{Q}H(P,Q) = \\min_{Q}D_{KL}(P||Q)$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "一种解释最大似然估计的观点是，将它看做**最小化训练集上的经验分布 $\\hat{p}_{data}$ 和模型分布之间的差异(也就是模型分布尽可能和经验分布 $\\hat{p}_{data}$ 相匹配**)，两者之间的差异可以通过 KL 散度度量：\n",
+    "\n",
+    "$$D_{KL}(\\hat{p}_{data}||p_{model}) =E_{x\\sim \\hat{p}_{data}}\\;[\\log \\hat{p}_{data}(\\mathbf{x})-\\log p_{model}(\\mathbf{x})]$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "等式右侧第一项不涉及模型，意味着训练模型最小化 KL 散度时，只需要最小化\n",
+    "\n",
+    "$$-E_{x\\sim \\hat{p}_{data}}\\;\\log p_{model}(\\mathbf{x})$$\n",
+    "\n",
+    "所以**最大化对数似然等价于最小化 KL 散度，也等价于最小化交叉熵。**即：\n",
+    "\n",
+    "$$\\theta_{ML}=\\min_{Q}H(P,Q) = \\min_{Q}D_{KL}(P||Q)$$\n",
+    "\n",
+    "三者是等价的。"
+   ]
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
