--- a/CH05_支持向量机SVC&SVR.ipynb
+++ b/CH05_支持向量机SVC&SVR.ipynb
@@ -298,7 +298,7 @@
    "source": [
     "和原来一样，对应的对偶问题是：\n",
     "\n",
-    "$$\\max_{\\mathbf{\\alpha}} \\left(\\sum_{i=1}^m\\alpha_i - \\frac{1}{2} \\sum_{i=1}^{m}\\sum_{j=1}^{m}\\alpha_i\\alpha_j y_{i} y_{j}\\phi(\\mathbf{x})^T_i\\phi(\\mathbf{x}_j)\\right)$$\n",
+    "$$\\max_{\\mathbf{\\alpha}} \\left(\\sum_{i=1}^m\\alpha_i - \\frac{1}{2} \\sum_{i=1}^{m}\\sum_{j=1}^{m}\\alpha_i\\alpha_j y_{i} y_{j}\\phi(\\mathbf{x}_i)^T\\phi(\\mathbf{x}_j)\\right)$$\n",
     "\n",
     "$$s.t. \\quad \\sum_{i=1}^{m} \\alpha_i y_i=0 \\quad \\alpha_i \\geq 0$$"
    ]
@@ -307,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "上式涉及到计算 $\\phi(\\mathbf{x})^T_i\\phi(\\mathbf{x}_j)$，在高维空间的内积。因为**在高维甚至无穷维空间计算向量内积的复杂度是很高的，所以我们引入了“核函数”（kernal function）如下**：\n",
+    "上式涉及到计算 $\\phi(\\mathbf{x}_i)^T\\phi(\\mathbf{x}_j)$，在高维空间的内积。因为**在高维甚至无穷维空间计算向量内积的复杂度是很高的，所以我们引入了“核函数”（kernal function）如下**：\n",
     "\n",
     "$$K(\\mathbf{x}_i, \\mathbf{x}_j) = \\langle \\phi(\\mathbf{x}_i),\\phi(\\mathbf{x}_j)\\rangle = \\phi(\\mathbf{x})^T_i\\phi(\\mathbf{x}_j)$$"
    ]
