--- a/CH11_聚类.ipynb
+++ b/CH11_聚类.ipynb
@@ -278,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"figure/k-means.png\"  width='400' hegiht='300' align='left'>"
+    "<img src=\"figure/k-means.png\"  width='500' hegiht='500' align='left'>"
    ]
   },
   {
@@ -321,7 +321,7 @@
    "source": [
     "#### [sklearn.cluster.KMeans](https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html)\n",
     "\n",
-    "* n_init 参数：因为最终的聚类结果收到随机初始化的聚类中心点影响，为了避免陷入局部最优解，解决办法之一就是进行n次随机初始化的操作，从中选择成本最小的那个函数。n_init 这个参数的功能即在于此。\n",
+    "* n_init 参数：因为最终的聚类结果受到随机初始化的聚类中心点影响，为了避免陷入局部最优解，解决办法之一就是进行n次随机初始化的操作，从中选择成本最小的那个函数。n_init 这个参数的功能即在于此。\n",
     "\n",
     "[参数解释](https://blog.csdn.net/qq_34104548/article/details/79336584)\n",
     "\n",
@@ -743,7 +743,7 @@
     "\n",
     "|定义|数学性质|概念理解|\n",
     "| ---| ---|---|\n",
-    "|密度直达啊|通常不满足对称性|以 MinPts 为临界值，重新定义了邻域中心与邻域元素的关系|\n",
+    "|密度直达|通常不满足对称性|以 MinPts 为临界值，重新定义了邻域中心与邻域元素的关系|\n",
     "|密度可达|满足直递性，但不满足对称性|在 密度直达 的意义下，元素之间具有直递性|\n",
     "|密度相连|满足对称性|在密度可达的意义下，属于同一个集合，具有对称的连通性|"
    ]
@@ -1159,7 +1159,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "166.188px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   },
