--- a/CH01_机器学习理论基础.ipynb
+++ b/CH01_机器学习理论基础.ipynb
@@ -349,10 +349,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| 预测数据 实际数据 | 实际恶性肿瘤 | 实际良性肿瘤 |\n",
+    "| 预测\\真实| 真正例 | 真反例 |\n",
     "| :---------------| :---------- | :---------- |\n",
-    "| 预测恶性肿瘤    | TP | FP |\n",
-    "| 预测良性肿瘤    | FN | TN |"
+    "| 预正例    | TP(真阳性) | FP(伪阳性) |\n",
+    "| 预反例    | FN(伪阴性) | TN(真阴性) |"
    ]
   },
   {
@@ -371,6 +371,13 @@
    "source": [
     "其中 True/False 表示预测结果是否正确，简写为 T/F； Positive/Negative 表示预测结果是1（恶性肿瘤）或0（良性肿瘤），简写为 P/N。所以TruePositive表示正确地预测出恶性肿瘤的数量，其他也是相应的数量。\n",
     "\n",
+    "查准率和召回率一般是一对矛盾的度量。一般来说，查准率比较高时，查全率比较低；反之亦然。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**处理先验概率比较低的问题时，我们总是把概率较低的事件定义为1.**\n",
     "\n",
     "在 scikit-learn 中，评估模型性能的算法都在 [sklearn.metrics](https://scikit-learn.org/stable/modules/classes.html#module-sklearn.metrics) 里。其中，计算查准率和召回率的API分别是 [sklearn.metrics.precision_score()](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.precision_score.html#sklearn.metrics.precision_score) 和 [sklearn.metrics.recall_score()](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.recall_score.html#sklearn.metrics.recall_score) 。"
@@ -380,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### F1 score\n",
+    "### F1 score 和 $F_{\\beta}$ score\n",
     "\n",
     "如果现在一个算法的 (precision, recall)是（0.5， 0.4），另外一个是（0.02， 1.0）。哪个好呢？\n",
     "\n",
@@ -400,16 +407,79 @@
     "\n",
     "$$\\frac{1}{F_\\beta} =\\frac{1}{1+\\beta^2}(\\frac{1}{P} + \\frac{\\beta^2}{R}) $$\n",
     "\n",
-    "其中$\\beta$度量了 precision 和 recall 的重要性。$\\beta=1$ 为标准的 F1; $\\beta>1$ 时 precision 有更大影响；$\\beta<1$ 时 recall 有更大影响。"
+    "其中$\\beta$度量了 precision 和 recall 的重要性：\n",
+    "\n",
+    "* $\\beta=1$ 为标准的 F1; \n",
+    "\n",
+    "\n",
+    "* $\\beta>1$ 时 precision 有更大影响；\n",
+    "\n",
+    "\n",
+    "* $\\beta<1$ 时 recall 有更大影响。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ROC 与 AUC\n",
+    "### ROC 与 AUC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "首先我们定义**真阳性率(TPR) 和 伪阳性率(FPR）**如下：\n",
     "\n",
-    "若一个学习器的ROC（受试者工作特征曲线，Receiver Operating Characteristic Cure）曲线被另一个学习器曲线完全“包住”，则可断言后者的性能优于前者；如果发生交叉，则看ROC曲线下的面积，也就是AUC(Area Under ROC Cure)"
+    "$$ TPR = \\frac{TP}{TP + FN}$$\n",
+    "\n",
+    "$$ FPR = \\frac{FP}{FP + TN}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ROC曲线绘制过程：**\n",
+    "\n",
+    "1. 以 伪阳性率(FPR） 为 X 轴，以 真阳性率(TPR) 为 Y 轴，则每个点的ROC坐标为 (FPR, TPR)；\n",
+    "\n",
+    "\n",
+    "2. 假设样本集由 $m^{+}$ 个正例 和 $m^{-}$ 个负例组成，将预测结果按照预测为正例的概率从大到小排序；\n",
+    "\n",
+    "\n",
+    "3. 把分类为正例的阈值 $\\delta$设为最大，即将所有样例都预测为反例，此时 ROC坐标为 (0, 0)；\n",
+    "\n",
+    "\n",
+    "4. 将分类阈值 $\\delta$ 依次设为每个样例的预测值，即依次将每个样例划分为正例，即预测为正样例的个数逐次增加，同时预测为负样例的个数逐次减少。沿着样本下降，假设前一个标记点坐标为(x,y)：\n",
+    "\n",
+    "    * 假设当前样本是真正例，则对应标记点的坐标为 $(x, y+\\frac{1}{m^{+}})$；\n",
+    "    \n",
+    "    * 假设当前样本是假正例，则对应标记点的坐标为 $(x+\\frac{1}{m^{-}},y)$。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='figure/ROC.png'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "通过以下方式来比较两个学习器的优劣：\n",
+    "\n",
+    "* 若一个学习器的ROC（受试者工作特征曲线，Receiver Operating Characteristic Cure）曲线被另一个学习器曲线完全“包住”，则可断言后者的性能优于前者；因为当被“包住”时，意味着：\n",
+    "\n",
+    "    1. 当 x 一致即 FPR 一致的时候，后者曲线的 TPR 比前者大，即真阳性率高；\n",
+    "    \n",
+    "    \n",
+    "    2. 当 y 一致即 TPR 一致的时候，后者曲线的 FPR 比前者小，即伪阳性率更低。\n",
+    "    \n",
+    "\n",
+    "* 如果发生交叉，则看ROC曲线下的面积谁更大，也就是AUC(Area Under ROC Cure)大的学习率更好。"
    ]
   },
   {
@@ -527,8 +597,8 @@
    "source": [
     "三个拆分策略图示：\n",
     "\n",
-    "<img src=\"figure/多分类.png\" width=\"400\" hegiht=\"300\" align=left />\n",
-    "<img src=\"figure/MvM.png\" width=\"400\" hegiht=\"300\" align=right />\n"
+    "<img src=\"figure/多分类.png\" width=\"500\" hegiht=\"400\" align=left />\n",
+    "<img src=\"figure/MvM.png\" width=\"500\" hegiht=\"400\" align=left />\n"
    ]
   },
   {
@@ -550,6 +620,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
