--- a/CH04_逻辑回归.ipynb
+++ b/CH04_逻辑回归.ipynb
@@ -298,6 +298,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 关于LR 的几个讨论"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "**1.既然 LR 对应的成本函数是一个凸函数，通过求导可以直接得到最优解，为何还需要通过迭代的方式去求？**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "因为正如上面所看到的的，成本函数对任意一个参数的偏导数为：\n",
+    "\n",
+    "$$\\frac{\\partial\\ell(\\mathbf{\\theta})}{\\partial \\theta_j}=\\sum_{i=1}^{m}(y_i - h_{\\mathbf{\\theta}}(\\mathbf{x}_i))x_{ij}$$\n",
+    "\n",
+    "里面也包含了 j 以外其他未知参数 $\\theta_i(i\\neq j)$。\n",
+    "\n",
+    "如果联立关于 n 个参数的偏导等于0的等式，得到的是一个 $\\mathbf{A}\\mathbf{\\theta}=\\mathbf{b}$ 的矩阵方程，直接求解参数是不太现实的。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "**2.LR 是解决二分类问题的，如何拓展到多分类？**\n",
+    "\n",
+    "可以通过通用的方法 **OVR/OVO** 或者将 sigmoid 函数拓展到 softmax 函数来实现多分类。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "**3.LR适合哪些场景？不适合哪些场景？为什么？**\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## [sklearn.linear_model.LogisticRegression](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html)"
    ]
   },
@@ -747,18 +795,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
