--- a/CH06_决策树.ipynb
+++ b/CH06_决策树.ipynb
@@ -59,39 +59,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 信息熵\n",
-    "\n",
-    "**a.信息量**"
+    "### 信息熵"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "在谈信息熵之前，我们先提一个概念：**信息量(专业术语是：自信息), 信息量等于传输该信息所用的代价**，也可以说是，解决这个问题所需要的信息量大小。我们日常经常会说，这个人长篇大论没有什么信息量，可以视为我们对这个人说这段话所包含的信息的度量。信息量应该至少满足三个条件：\n",
-    "* 非负性：一条额外信息传递所带来的累积信息量不应该小于传递这条额外信息之前，所以这条额外信息的信息量（即累积信息量的差）应该是非负的；\n",
-    "\n",
-    "\n",
-    "* 可加性：针对同一件事，两个人传递的两条独立信息所包含的信息量是可加的；\n",
-    "\n",
-    "\n",
-    "* **与事件本身发生的概率成反比**： 对于一件事，什么信息包含的信息量大呢？**发生概率低的信息所携带的信息量大**，如果一个人告诉你，太阳从东方升起（百分百发生的事情，携带的信息量为0）。\n",
-    "\n",
-    "总的来说，一条信息的信息量和它的不确定性有直接关系。信息量的数学定义为：$-log_{2}P(x)$，其中 P(x) 为该事件发生的概率。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**b.信息熵**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "信息熵是跟所有可能性有关系的。每个可能事件的发生都有个概率。信息熵就是平均而言发生一个事件我们得到的信息量大小。所以数学上，信息熵其实是信息量的期望。数学定义如下：\n",
+    "信息熵是跟所有可能性有关系的。每个可能事件的发生都有个概率。信息熵就是平均而言发生一个事件我们得到的信息量大小。所以数学上，信息熵其实是信息量的期望。离散情况下数学定义如下：\n",
     "\n",
     "$$ H(x)=-\\sum_{x\\in{X}}P(x)log_{2}P(x)$$\n",
     "\n",
@@ -1276,22 +1251,11 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "name": "python3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -1324,7 +1288,7 @@
     "height": "473px",
     "left": "1207px",
     "top": "134px",
-    "width": "302px"
+    "width": "165px"
    },
    "toc_section_display": true,
    "toc_window_display": true
