--- a/CH10_集成学习之Boosting族算法.ipynb
+++ b/CH10_集成学习之Boosting族算法.ipynb
@@ -1187,22 +1187,11 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "name": "python3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -1235,7 +1224,7 @@
     "height": "47px",
     "left": "1207px",
     "top": "110px",
-    "width": "422px"
+    "width": "222px"
    },
    "toc_section_display": true,
    "toc_window_display": true
