局部细节更新

--- a/CH00_数学公式.ipynb
+++ b/CH00_数学公式.ipynb
@@ -1091,7 +1091,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 信息论"
+    "# 度量"
    ]
   },
   {
@@ -1321,7 +1321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 三者的等价性"
+    "## 最优化意义下三者的等价性"
    ]
   },
   {
@@ -1348,13 +1348,47 @@
    "source": [
     "等式右侧第一项不涉及模型，意味着训练模型最小化 KL 散度时，只需要最小化\n",
     "\n",
-    "$$-E_{x\\sim \\hat{p}_{data}}\\;\\log p_{model}(\\mathbf{x})$$\n",
+    "$$-E_{x\\sim \\hat{p}_{data}}\\;\\log p_{model}(\\mathbf{x})$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "有前面可知，最大似然为\n",
     "\n",
+    "$$\\mathbf{\\theta}_{ML} = \\arg\\max_{\\mathbf{\\theta}}E_{\\mathbf{x}\\sim \\hat{p}_{data}}\\log p_{model}\n",
+    "(\\mathbf{x};\\mathbf{\\theta})$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "所以**最大化对数似然等价于最小化 KL 散度，也等价于最小化交叉熵。**即：\n",
     "\n",
-    "$$\\theta_{ML}=\\min_{Q}H(P,Q) = \\min_{Q}D_{KL}(P||Q)$$\n",
+    "$$\\begin{split}\\mathbf{\\theta}_{ML} =\\min_{p_{model}}\\; D_{KL}(\\hat{p}_{data}||p_{model})=\\min_{p_{model}}\\; H(\\hat{p}_{data},p_{model})\n",
+    "\\end{split}$$\n",
     "\n",
-    "三者是等价的。"
+    "在最优化的意义下三者是等价的。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MSE: 均方误差"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对于样例集合$D = \\{ (\\mathbf{x}_1, y_1), (\\mathbf{x}_2, y_2), ... , (\\mathbf{x}_n, y_n)\\}$,通过“均方误差”（mean squared error）来进行性能度量：\n",
+    "\n",
+    "$$E(f;D) = \\frac{1}{m}\\sum_{i=1}^m (f(\\mathbf{x}_i) - y_i)^2$$\n",
+    "\n",
+    "“均方误差”的几何意义是学习器与真实样本之间的 $L^2$ 范数。**基于 MSE 最小化来求解 f 的方法称为“最小二乘法”**。具体求解过程等同于为凸函数求解最小值，不赘述。"
    ]
   }
  ],
