--- a/CH03_线性回归.ipynb
+++ b/CH03_线性回归.ipynb
@@ -24,25 +24,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MSE: 均方误差\n",
-    "\n",
-    "对于样例集合$D = \\{ (\\mathbf{x}_1, y_1), (\\mathbf{x}_2, y_2), ... , (\\mathbf{x}_n, y_n)\\}$,通过“均方误差”（mean squared error）来进行性能度量：\n",
-    "\n",
-    "$$E(f;D) = \\frac{1}{m}\\sum_{i=1}^m (f(\\mathbf{x}_i) - y_i)^2$$\n",
-    "\n",
-    "“均方误差”的几何意义是学习器与真实样本之间的 $L^2$ 范数。**基于 MSE 最小化来求解 f 的方法称为“最小二乘法”**。具体求解过程等同于为凸函数求解最小值，不赘述。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 一元线性回归\n",
     "\n",
     "对于集合$D = \\{(x_i, y_i)\\}_{i=1}^m,$一元线性回归试图学习得到如下映射关系：\n",
     "\n",
     "$$f(x_i) = w x_i + b  \\quad s.t. f(x_i) \\approx y_i, \\quad (x_i, y_i) \\in D$$\n",
     "\n",
+    "写成矩阵的形式如下：\n",
+    "$$\n",
+    "\\left(                 \n",
+    "\\begin{array}{cc}   \n",
+    "x_1 & 1\\\\  \n",
+    "x_2 & 1\\\\  \n",
+    "\\vdots & 1\\\\ \n",
+    "x_m & 1\\\\ \n",
+    "\\end{array} \n",
+    "\\right)\n",
+    "\\left(                 \n",
+    "\\begin{array}{cc}\n",
+    "w\\\\\n",
+    "b\\\\\n",
+    "\\end{array}\\right)=\n",
+    "\\left(\n",
+    "\\begin{array}{cc}\n",
+    "y_1\\\\\n",
+    "y_2\\\\\n",
+    "\\vdots\\\\\n",
+    "y_m\\\\\n",
+    "\\end{array} \n",
+    "\\right)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "我们通过MSE来度量 $f(x_i)$与 y 之间的误差 $E(w,b)=\\sum_{i=1}^m (y_i - w x_i - b)^2$，进而也得到了 w 和 b 的值：\n",
     "\n",
     "$$\\begin{split}(w^*, b^*) =  &\\arg\\min_{(w, b)} \\sum_{i=1}^m (f(x_i) - y_i)^2 \\\\\n",
@@ -82,14 +99,52 @@
    "source": [
     "## 多元线性回归\n",
     "\n",
-    "更一般的情形是本节开头所提到的数据集 $D = \\{\\mathbf{x}^1, ...,\\mathbf{x}^m\\}, \\quad \\mathbf{x}^k = (x_1^k, ... , x_n^k)$, 我们试图获得学习器（逼近函数）：\n",
+    "更一般的情形是本节开头所提到的数据集 $D = \\{ (\\mathbf{x}^1, y_1), (\\mathbf{x}^2, y_2), ... , (\\mathbf{x}^m, y_m)\\},\\mathbf{x}^i = (x^i_{0},x^i_{1}, x^i_{2}, ...,x^i_{n})$。 我们试图获得学习器（逼近函数）：\n",
     "\n",
-    "$$ h_\\theta(\\mathbf{x}^k) = \\theta_0 x_0^k + \\theta_1 x_1^k + ... + \\theta_n x_n^k$$\n",
+    "$$ h_\\theta(\\mathbf{x}^k) = \\theta_0 x_0^k + \\theta_1 x_1^k + ... + \\theta_n x_n^k \\quad s.t. \\quad h_\\theta(\\mathbf{x}^k) \\approx y_k, \\quad (\\mathbf{x}_k, y_k) \\in D$$\n",
     "\n",
-    "其中 $x_0^k=1$。\n",
+    "其中 $x_0^k=1$。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "写成矩阵的形式如下：\n",
+    "$$\n",
+    "\\left(                 \n",
+    "\\begin{array}{cc}   \n",
+    "x^1_0 & x^1_1 & \\cdots & x^1_n\\\\  \n",
+    "x^2_0 & x^2_1 & \\cdots & x^2_n\\\\    \n",
+    "\\vdots & \\vdots & \\cdots & \\vdots\\\\  \n",
+    "x^m_0 & x^m_1 & \\cdots & x^m_n\\\\  \n",
+    "\\end{array} \n",
+    "\\right)\n",
+    "\\left(                 \n",
+    "\\begin{array}{cc}\n",
+    "\\theta_0\\\\\n",
+    "\\theta_1\\\\\n",
+    "\\vdots\\\\\n",
+    "\\theta_n\\\\\n",
+    "\\end{array}\\right)=\n",
+    "\\left(\n",
+    "\\begin{array}{cc}\n",
+    "y_1\\\\\n",
+    "y_2\\\\\n",
+    "\\vdots\\\\\n",
+    "y_m\\\\\n",
+    "\\end{array} \n",
+    "\\right)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "简写为\n",
     "\n",
-    "\n",
-    "类似，可以通过最小二乘法来进行参数估计。"
+    "$$\\mathbf{X}\\mathbf{\\theta} = \\mathbf{y}$$"
    ]
   },
   {
